[tool.poetry]
name = "data_pipeline_api"
version = "0.1.0"
description = "API for the FAIR Data Pipeline"
authors = ["Scottish COVID Response Consortium"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.4"
matplotlib = "^3.1.3"
pandas = "^1.0.3"
toml = "^0.9.4"
h5py = "^2.10.0"
scipy = "^1.4.1"
PyYAML = "^5.3.1"
semver = "^2.9.0"
fsspec = "^0.7.4"
s3fs = "^0.4.2"
click = "^7.1.2"
requests = "^2.23.0"
paramiko = "^2.7.1"
GitPython = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
